--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,17 @@
     <meta content="initial-scale=1.0, minimum-scale=1.0, width=device-width" name="viewport">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content="no" name="apple-mobile-web-app-capable">
-    <meta content="P'application Studio is an innovation studio. We build products." name="description">
+    <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." name="description">
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@P_application" name="twitter:site">
     <meta content="P'application Studio | Innovation Studio" name="twitter:title">
-    <meta content="P'application Studio is an innovation studio. We build products." name="twitter:description">
+    <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." name="twitter:description">
     <meta content="https://papplication.github.io/site/img/icons/1200x1200.jpg" name="twitter:image">
     <meta content="https://papplication.github.io/site/" name="twitter:url">
     <meta content="website" property="og:type">
     <meta content="P'application Studio" property="og:site_name">
     <meta content="P'application Studio" property="og:title">
-    <meta content="P'application Studio is an innovation studio. We build products." property="og:description">
+    <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." property="og:description">
     <meta content="https://papplication.github.io/site/img/icons/1200x1200.jpg" property="og:image">
     <meta content="https://papplication.github.io/site/" property="og:url">
     <link href="img/icons/icon-iphone.png" rel="apple-touch-icon-precomposed" sizes="57x57">
