--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="social-media">
-            <a class="social-media-icon" href="https://twitter.com/P_application" target="_blank"><img src="img/icon-twitter.png"></a> <a class="social-media-icon" href="https://www.instagram.com/papplicationstudio/" target="_blank"><img src="img/icon-instagram.png"></a> <a class="social-media-icon" href="https://www.facebook.com/papplication/" target="_blank"><img src="img/icon-facebook.png"></a> <a class="social-media-icon" href="https://www.linkedin.com/company/a-4hgd/" target="_blank"><img src="img/icon-linked.png"></a> <a class="social-media-icon" href="https://www.youtube.com/channel/UCZ8TIQhI3LiNEq5TcFYt1TQ" target="_blank"><img src="img/icon-youtube.png"></a>
+            <a class="social-media-icon" href="https://twitter.com/P_application" target="_blank"><img src="img/icon-twitter.png"></a> <a class="social-media-icon" href="https://www.instagram.com/papplicationstudio/" target="_blank"><img src="img/icon-instagram.png"></a> <a class="social-media-icon" href="https://www.facebook.com/papplication/" target="_blank"><img src="img/icon-facebook.png"></a> <a class="social-media-icon" href="https://www.linkedin.com/company/papplicationstudio/" target="_blank"><img src="img/icon-linked.png"></a> <a class="social-media-icon" href="https://www.youtube.com/channel/UCZ8TIQhI3LiNEq5TcFYt1TQ" target="_blank"><img src="img/icon-youtube.png"></a>
         </div>
         <ul>
             <li>Copyright &copy; 2018 P'application Studio</li>
