--- a/contact.html
+++ b/contact.html
@@ -111,5 +111,12 @@
                   });
               } catch (e) {}
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121401102-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-121401102-1');
+    </script>
 </body>
 </html>
