--- a/index.html
+++ b/index.html
@@ -147,6 +147,23 @@
                         </div>
                     </div>
                 </section>
+                <section class="p-section articles-snippet">
+                    <div class="articles-snippet-col">
+                        <a class="articles-snippet-frame-wrapper" href="https://itunes.apple.com/app/bubblesh/id896476186" target="_blank">
+                        <div class="articles-snippet-frame" style="background-image: url(img/article-bubblesh.jpg)"></div></a>
+                    </div>
+                    <div class="articles-snippet-col">
+                        <div class="content-wrapper content-wrapper-smaller">
+                            <p>12/2/2014</p>
+                            <h1 class="title title-smaller u-weight-400"><a>Bubblesh</a></h1>
+                            <p></p>
+                            <div class="articles-snippet-link">
+                                <a class="button" href="https://itunes.apple.com/app/bubblesh/id896476186" target="_blank" title="Read more"><span>Read Article</span>
+                                <div class="button-arrow-right"></div></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
         </div>
     </main>
