--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="main-view">
                 <div class="main-view-list-wrapper">
                     <div class="main-view-list">
-                        <p class="u-font-size-lg">P'application Studio was created in 2013 and our mission is to create products we’re truly proud of. Programming opens new gates to give you insight of the world we created in our dreams and we hope to offer you an adventurous and fun time as we believe that programming is one of the most magnificent art of our time.</p>
+                        <p class="u-font-size-lg">P'application Studio was created in 2014 and our mission is to create products we’re truly proud of. Programming opens new gates to give you insight of the world we created in our dreams and we hope to offer you an adventurous and fun time as we believe that programming is one of the most magnificent art of our time.</p>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                             <h1 class="title title-smaller u-weight-400"><a>Bubblesh</a></h1>
                             <p></p>
                             <div class="articles-snippet-link">
-                                <a class="button" href="https://itunes.apple.com/app/bubblesh/id896476186" target="_blank" title="Read more"><span>Read Article</span>
+                                <a class="button" href="https://itunes.apple.com/app/bubblesh/id896476186" target="_blank" title="Read more"><span>Product Info</span>
                                 <div class="button-arrow-right"></div></a>
                             </div>
                         </div>
