--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <h1 class="title title-smaller u-weight-400"><a>Bubblesh</a></h1>
                             <p></p>
                             <div class="articles-snippet-link">
-                                <a class="button" href="https://itunes.apple.com/app/bubblesh/id896476186" target="_blank" title="Read more"><span>Product Info</span>
+                                <a class="button" href="https://itunes.apple.com/app/bubblesh/id896476186" target="_blank" title="Read more"><span>App Store Preview</span>
                                 <div class="button-arrow-right"></div></a>
                             </div>
                         </div>
