new favicon added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link href="img/icons/icon-iphone.png" rel="apple-touch-icon-precomposed" sizes="57x57">
     <link href="img/icons/icon-iphone-@2x.png" rel="apple-touch-icon-precomposed" sizes="114x114">
     <link href="img/icons/icon-ipad.png" rel="apple-touch-icon-precomposed" sizes="72x72">
+    <link href="img/icons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="img/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="img/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
 </head>
@@ -56,7 +59,7 @@
         <section class="p-section" id="products">
             <div class="product">
                 <div class="product-item u-is-invisible js-revealGallery">
-                    <a class="product-frame-wrapper" href="https://papplication.github.io/darkbeyond/" target="_blank">
+                    <a class="product-frame-wrapper" href="https://papplication.github.io/lastbeam/" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product1.jpg')"></div></a>
                     <div class="product-description">
                         <b>Last Beam</b> Coming soon
