--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a class="product-frame-wrapper" href="https://papplication.github.io/lastbeam/" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product1.jpg')"></div></a>
                     <div class="product-description">
-                        <b>Last Beam</b> Coming soon
+                        Match the blocks with the unique aiming beams in the circular playground. <b>Last Beam</b> provides wide range complexity with almost infinite variations to complete the different levels.
                     </div>
                 </div>
                 <div class="product-item u-is-invisible js-revealGallery">
