--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
             <section class="p-section">
                 <section class="p-section articles-snippet">
                     <div class="articles-snippet-col">
+                        <a class="articles-snippet-frame-wrapper" href="https://tinyurl.com/yaefa77s" target="_blank">
+                        <div class="articles-snippet-frame" style="background-image: url(img/article-last-beam.jpg)"></div></a>
+                    </div>
+                    <div class="articles-snippet-col">
+                        <div class="content-wrapper content-wrapper-smaller">
+                            <p>1/11/2018</p>
+                            <h1 class="title title-smaller u-weight-400"><a>Last Beam - Review</a></h1>
+                            <p></p>
+                            <div class="articles-snippet-link">
+                                <a class="button" href="https://tinyurl.com/yaefa77s" target="_blank" title="Read more"><span>Read Article</span>
+                                <div class="button-arrow-right"></div></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="p-section articles-snippet">
+                    <div class="articles-snippet-col">
                         <a class="articles-snippet-frame-wrapper" href="https://tinyurl.com/yct67ocp" target="_blank">
                         <div class="articles-snippet-frame" style="background-image: url(img/article-dark-beyond.jpg)"></div></a>
                     </div>
