Pathless coming soon

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         <section class="p-section" id="products">
             <div class="product">
                 <div class="product-item u-is-invisible js-revealGallery">
+                    <a class="product-frame-wrapper" href="https://papplication.github.io/pathless/" target="_blank">
+                    <div class="product-frame" style="background-image: url('img/home-product0.png')"></div></a>
+                    <div class="product-description">
+                        In the futuristic dark world of <b>Pathless</b> it is easy to get lost, will you find the way out? Memorize the different paths and try to repeat them in the same order. You must repeat the sequence of steps precisely to succeed.
+                    </div>
+                </div>
+                <div class="product-item u-is-invisible js-revealGallery">
                     <a class="product-frame-wrapper" href="https://papplication.github.io/lastbeam/" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product1.jpg')"></div></a>
                     <div class="product-description">
@@ -99,6 +106,23 @@
         </section>
         <div class="p-container" id="news">
             <section class="p-section">
+                <section class="p-section articles-snippet">
+                    <div class="articles-snippet-col">
+                        <a class="articles-snippet-frame-wrapper" href="https://tinyurl.com/yaefa77s" target="_blank">
+                        <div class="articles-snippet-frame" style="background-image: url(img/article-pathless.jpg)"></div></a>
+                    </div>
+                    <div class="articles-snippet-col">
+                        <div class="content-wrapper content-wrapper-smaller">
+                            <p>Coming soon</p>
+                            <h1 class="title title-smaller u-weight-400"><a>Pathless - Review</a></h1>
+                            <p></p>
+                            <div class="articles-snippet-link">
+                                <a class="button" href="https://tinyurl.com/yaefa77s" target="_blank" title="Read more"><span>Read Article</span>
+                                <div class="button-arrow-right"></div></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="p-section articles-snippet">
                     <div class="articles-snippet-col">
                         <a class="articles-snippet-frame-wrapper" href="https://tinyurl.com/yaefa77s" target="_blank">
