--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                     </div>
                     <div class="articles-snippet-col">
                         <div class="content-wrapper content-wrapper-smaller">
-                            <p>Coming soon</p>
+                            <p>17/07/2019</p>
                             <h1 class="title title-smaller u-weight-400"><a>Pathless - Review</a></h1>
                             <p></p>
                             <div class="articles-snippet-link">
-                                <a class="button" href="https://tinyurl.com/yaefa77s" target="_blank" title="Read more"><span>Read Article</span>
+                                <a class="button" href="https://tinyurl.com/y6dulkvw" target="_blank" title="Read more"><span>Read Article</span>
                                 <div class="button-arrow-right"></div></a>
                             </div>
                         </div>
