--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <section class="p-section">
                 <section class="p-section articles-snippet">
                     <div class="articles-snippet-col">
-                        <a class="articles-snippet-frame-wrapper" href="https://tinyurl.com/yaefa77s" target="_blank">
+                        <a class="articles-snippet-frame-wrapper" href="https://tinyurl.com/y6dulkvw" target="_blank">
                         <div class="articles-snippet-frame" style="background-image: url(img/article-pathless.jpg)"></div></a>
                     </div>
                     <div class="articles-snippet-col">
