--- a/index.html
+++ b/index.html
@@ -275,5 +275,13 @@
       gtag('js', new Date());
       gtag('config', 'UA-121401102-1');
     </script>
+    <script type="text/javascript">
+        var sc_project=12061286; 
+        var sc_invisible=1; 
+        var sc_security="46ede4fe"; 
+    </script>
+    <script type="text/javascript"
+    src="https://www.statcounter.com/counter/counter.js"
+    async></script>
 </body>
 </html>
