--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         <section class="p-section" id="products">
             <div class="product">
                 <div class="product-item u-is-invisible js-revealGallery">
+                    <a class="product-frame-wrapper" href="https://itunes.apple.com/app/id1522690856" target="_blank">
+                    <div class="product-frame" style="background-image: url('img/home-product7.png')"></div></a>
+                    <div class="product-description">
+                        Merge and feel the flow. <b>Tvinnr</b> is an intelligent puzzle game with simple and elegant design. Though challenging, <b>Tvinnr</b> has a relaxing flow of play. 
+                    </div>
+                </div>
+                <div class="product-item u-is-invisible js-revealGallery">
                     <a class="product-frame-wrapper" href="https://apps.apple.com/us/app/4096-dark/id1510237492" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product6.png')"></div></a>
                     <div class="product-description">
@@ -113,6 +120,23 @@
         </section>
         <div class="p-container" id="news">
             <section class="p-section">
+                <section class="p-section articles-snippet">
+                    <div class="articles-snippet-col">
+                        <a class="articles-snippet-frame-wrapper" href="https://itunes.apple.com/app/id1522690856" target="_blank">
+                        <div class="articles-snippet-frame" style="background-image: url(img/article-tvinnr.jpg)"></div></a>
+                    </div>
+                    <div class="articles-snippet-col">
+                        <div class="content-wrapper content-wrapper-smaller">
+                            <p>27/07/2020</p>
+                            <h1 class="title title-smaller u-weight-400"><a>Tvinnr</a></h1>
+                            <p></p>
+                            <div class="articles-snippet-link">
+                                <a class="button" href="https://itunes.apple.com/app/id1522690856" target="_blank" title="Read more"><span>App Store Preview</span>
+                                <div class="button-arrow-right"></div></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="p-section articles-snippet">
                     <div class="articles-snippet-col">
                         <a class="articles-snippet-frame-wrapper" href="https://apps.apple.com/us/app/4096-dark/id1510237492" target="_blank">
