--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         <section class="p-section" id="products">
             <div class="product">
                 <div class="product-item u-is-invisible js-revealGallery">
+                    <a class="product-frame-wrapper" href="https://itunes.apple.com/app/id1553087665" target="_blank">
+                    <div class="product-frame" style="background-image: url('img/home-product8.png')"></div></a>
+                    <div class="product-description">
+                        <b>Blixi</b> is the sequel to Tvinnr. Relaxing puzzle game with beautiful neumorphic design. Swipe & merge the blocks.
+                    </div>
+                </div>
+                <div class="product-item u-is-invisible js-revealGallery">
                     <a class="product-frame-wrapper" href="https://itunes.apple.com/app/id1522690856" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product7.png')"></div></a>
                     <div class="product-description">
@@ -120,6 +127,23 @@
         </section>
         <div class="p-container" id="news">
             <section class="p-section">
+                <section class="p-section articles-snippet">
+                    <div class="articles-snippet-col">
+                        <a class="articles-snippet-frame-wrapper" href="https://itunes.apple.com/app/id1553087665" target="_blank">
+                        <div class="articles-snippet-frame" style="background-image: url(img/article-blixi.jpg)"></div></a>
+                    </div>
+                    <div class="articles-snippet-col">
+                        <div class="content-wrapper content-wrapper-smaller">
+                            <p>26/02/2021</p>
+                            <h1 class="title title-smaller u-weight-400"><a>Blixi</a></h1>
+                            <p></p>
+                            <div class="articles-snippet-link">
+                                <a class="button" href="https://itunes.apple.com/app/id1553087665" target="_blank" title="Read more"><span>App Store Preview</span>
+                                <div class="button-arrow-right"></div></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="p-section articles-snippet">
                     <div class="articles-snippet-col">
                         <a class="articles-snippet-frame-wrapper" href="https://itunes.apple.com/app/id1522690856" target="_blank">
