--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a class="product-frame-wrapper" href="https://itunes.apple.com/app/id1553087665" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product8.png')"></div></a>
                     <div class="product-description">
-                        <b>Blixi</b> is the sequel to Tvinnr. Relaxing puzzle game with beautiful neumorphic design. Swipe & merge the blocks.
+                        <b>Blixi</b> is the sequel to Tvinnr. Relaxing puzzle game with beautiful neumorphic design. Swipe & merge the circles.
                     </div>
                 </div>
                 <div class="product-item u-is-invisible js-revealGallery">
