--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="articles-snippet-col">
                         <div class="content-wrapper content-wrapper-smaller">
-                            <p>26/02/2021</p>
+                            <p>Coming soon</p>
                             <h1 class="title title-smaller u-weight-400"><a>Blixi</a></h1>
                             <p></p>
                             <div class="articles-snippet-link">
