--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>P'application Studio</title>
+    <title>P'application Studio | Contact</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="initial-scale=1.0, minimum-scale=1.0, width=device-width" name="viewport">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
