--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>P'application Studio</title>
+    <title>P'application Studio | Privacy</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="initial-scale=1.0, minimum-scale=1.0, width=device-width" name="viewport">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -43,7 +43,7 @@
                 <header class="p-header">
                     <div class="p-terms-title">
                         <h4>P'application Studio Privacy Policy</h4>
-                        <p><strong>Last Revised: June 26, 2018</strong></p>
+                        <p><strong>Last Revised: June 26, 2020</strong></p>
                     </div>
                 </header>
                 <div class="p-terms-content">
