--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     <link href="img/icons/icon-ipad.png" rel="apple-touch-icon-precomposed" sizes="72x72">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://papplication.github.io/site/index.html" rel="canonical">
 </head>
 <body id="home">
     <nav class="nav js-nav">
@@ -41,7 +42,7 @@
         <div class="p-container">
             <div class="main-title u-is-invisible js-revealHero">
                 <div class="p-container">
-                    <h1 class="headline">P'application Studio</h1>
+                    <h1 class="headline">P'application Studio | Contact</h1>
                     <h4 class="headline-sub">Life found a way.</h1>
                 </div>
             </div>
