--- a/privacy.html
+++ b/privacy.html
@@ -24,6 +24,7 @@
     <link href="img/icons/icon-ipad.png" rel="apple-touch-icon-precomposed" sizes="72x72">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://papplication.github.io/site/index.html" rel="canonical">
 </head>
 <body id="home">
     <nav class="nav js-nav">
@@ -42,7 +43,7 @@
             <article class="p-terms">
                 <header class="p-header">
                     <div class="p-terms-title">
-                        <h1>P'application Studio Privacy Policy</h1>
+                        <h1>P'application Studio | Privacy Policy</h1>
                         <p><strong>Last Revised: June 26, 2020</strong></p>
                     </div>
                 </header>
