--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,11 @@
             </div>
             <article class="p-terms">
                 <div class="p-terms-content">
+                    <h2 class="title">Hello there.</br> How can we help?</h2>
+                    <p>We are here to help in any way we can, Please send you question or anything you might need to know at this email.</p>
+                    <p>We really appreciate your feedback which will help us to continue improving our products for you.</p>
                     <h4 class="subtitle subtitle-strong">Contacts</h1>
-                    <p>General press inquiries: <a href="mailto:papplicationstudio@gmail.com">papplicationstudio@gmail.com</a></p>
+                    <p>General press inquiries: <a href="mailto:papplicationstudio@gmail.com"><b>papplicationstudio@gmail.com</b></a></p>
                     <p>Founder, <a href="https://www.linkedin.com/in/oliv%C3%A9r-papp-a55566111/">Oliver Papp</a></p>
                 </div>
             </article>
