--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <link href="img/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
-    <link href="https://papplication.github.io/site/index.html" rel="canonical">
+    <link href="https://papplication.github.io/site/index" rel="canonical">
 </head>
 <body id="home">
     <nav class="nav js-nav">
         <div class="nav-wrapper js-nav-wrapper">
             <a class="nav-logo" href="#home"><img src="img/logo-papp-blk.svg"></a> <a class="nav-drawer-toggle js-nav-drawerToggle" id="toggleMenu">Menu</a>
             <div class="nav-menu">
-                <a class="nav-menu-link js-nav-menuLink" href="#about">About</a> <a class="nav-menu-link js-nav-menuLink" href="#products">Products</a> <a class="nav-menu-link js-nav-menuLink" href="#news">News</a> <a class="nav-menu-link js-nav-menuLink" href="contact.html">Support</a>
+                <a class="nav-menu-link js-nav-menuLink" href="#about">About</a> <a class="nav-menu-link js-nav-menuLink" href="#products">Products</a> <a class="nav-menu-link js-nav-menuLink" href="#news">News</a> <a class="nav-menu-link js-nav-menuLink" href="contact">Support</a>
             </div>
         </div>
         <div class="nav-drawer js-nav-drawer">
-            <a class="nav-drawer-link js-nav-drawerLink" href="#about">About</a> <a class="nav-drawer-link js-nav-drawerLink" href="#products">Products</a> <a class="nav-drawer-link js-nav-drawerLink" href="#news">News</a> <a class="nav-drawer-link js-nav-drawerLink" href="contact.html">Support</a>
+            <a class="nav-drawer-link js-nav-drawerLink" href="#about">About</a> <a class="nav-drawer-link js-nav-drawerLink" href="#products">Products</a> <a class="nav-drawer-link js-nav-drawerLink" href="#news">News</a> <a class="nav-drawer-link js-nav-drawerLink" href="contact">Support</a>
         </div>
     </nav>
     <main class="p-main">
@@ -304,19 +304,19 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact">Contact Us</a>
                     </li>
                     <li>
                         <a href="img/presskit.zip">Press Kit</a>
                     </li>
                     <li>
-                        <a href="privacy.html">Privacy Policy</a>
+                        <a href="privacy">Privacy Policy</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="social-media">
-            <a class="social-media-icon" href="https://twitter.com/P_application" target="_blank"><img src="img/icon-twitter.png"></a> <a class="social-media-icon" href="https://www.instagram.com/papplicationstudio/" target="_blank"><img src="img/icon-instagram.png"></a> <a class="social-media-icon" href="https://www.facebook.com/papplication/" target="_blank"><img src="img/icon-facebook.png"></a> <a class="social-media-icon" href="https://www.linkedin.com/company/papplicationstudio/" target="_blank"><img src="img/icon-linked.png"></a> <a class="social-media-icon" href="https://www.youtube.com/channel/UCZ8TIQhI3LiNEq5TcFYt1TQ" target="_blank"><img src="img/icon-youtube.png"></a>
+            <a class="social-media-icon" href="https://twitter.com/P_application" target="_blank"><img src="img/icon-twitter.png"></a> <a class="social-media-icon" href="https://www.instagram.com/papplicationstudio/" target="_blank"><img src="img/icon-instagram.png" alt="instagram icon"></a> <a class="social-media-icon" href="https://www.facebook.com/papplication/" target="_blank"><img src="img/icon-facebook.png" alt="facebook icon"></a> <a class="social-media-icon" href="https://www.linkedin.com/company/papplicationstudio/" target="_blank"><img src="img/icon-linked.png" alt="linkedin icon"></a> <a class="social-media-icon" href="https://www.youtube.com/channel/UCZ8TIQhI3LiNEq5TcFYt1TQ" target="_blank"><img src="img/icon-youtube.png" alt="youtube icon"></a>
         </div>
         <ul>
             <li>Copyright &copy; 2021 P'application Studio</li>
