--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="img/icons/icon-ipad.png" rel="apple-touch-icon-precomposed" sizes="72x72">
     <link href="img/icons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="img/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-    <link href="img/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link href="img/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
     <link href="https://papplication.github.io/site/index" rel="canonical">
@@ -64,7 +64,7 @@
                     <a class="product-frame-wrapper" href="https://itunes.apple.com/app/id1560297711" target="_blank">
                     <div class="product-frame" style="background-image: url('img/home-product8.png')"></div></a>
                     <div class="product-description">
-                        <b>Blixi</b> is the sequel to Tvinnr. Relaxing puzzle game with beautiful neumorphic design. Swipe & merge the circles.
+                        <b>Blixi</b> is the sequel to Tvinnr. Relaxing puzzle game with beautiful neumorphic design. Swipe &amp merge the circles.
                     </div>
                 </div>
                 <div class="product-item u-is-invisible js-revealGallery">
