--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content="no" name="apple-mobile-web-app-capable">
     <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." name="description">
+    <meta content="game maker to ios, ios game downloads, ios games, mobile game, mobile game downloads, badlands arcade game, rubic cube, rubic cube pattern, rubic cube solution, arcade game, free download arcade game, abantus,saga,papplicationstudio,ios,swift,indiedev,game,indiegame,cube,rectangle,jewel,bejewel,tetrix,pacman,cube crash,space arcade,candycrush,in space,cube,arcade,sun,space,bloks,rectangle,square,jewel,crash,puzzle,candy,crush,miner,hero,similar,block,circle,ball,orb,best,merge,number,2048,block,solitaire,2021,color,match,glow,cube,fall,dice,1,slider" name="keywords" />
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@P_application" name="twitter:site">
     <meta content="P'application Studio | Innovation Studio" name="twitter:title">
@@ -22,6 +23,9 @@
     <link href="img/icons/icon-iphone.png" rel="apple-touch-icon-precomposed" sizes="57x57">
     <link href="img/icons/icon-iphone-@2x.png" rel="apple-touch-icon-precomposed" sizes="114x114">
     <link href="img/icons/icon-ipad.png" rel="apple-touch-icon-precomposed" sizes="72x72">
+    <link href="img/icons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="img/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="img/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
     <link href="https://papplication.github.io/site/index" rel="canonical">
