--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,15 @@
             <div class="main-title u-is-invisible js-revealHero">
                 <div class="p-container">
                     <h1 class="headline">P'application Studio | Contact</h1>
-                    <h4 class="headline-sub">Life found a way.</h1>
+                    <h4 class="headline-sub">Life found a way.</h4>
                 </div>
             </div>
             <article class="p-terms">
                 <div class="p-terms-content">
-                    <h2 class="title">Hello there.</br> How can we help?</h2>
+                    <h2 class="title">Hello there.<br> How can we help?</h2>
                     <p>We are here to help in any way we can, Please send you question or anything you might need to know at this email.</p>
                     <p>We really appreciate your feedback which will help us to continue improving our products for you.</p>
-                    <h4 class="subtitle subtitle-strong">Contacts</h1>
+                    <h4 class="subtitle subtitle-strong">Contacts</h4>
                     <p>General press inquiries: <a href="mailto:papplicationstudio@gmail.com"><b>papplicationstudio@gmail.com</b></a></p>
                     <p>Founder, <a href="https://www.linkedin.com/in/oliv%C3%A9r-papp-a55566111/">Oliver Papp</a></p>
                 </div>
