--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body id="home">
     <nav class="nav js-nav">
         <div class="nav-wrapper js-nav-wrapper">
-            <a class="nav-logo" href="#home"><img src="img/logo-papp-blk.svg"></a> <a class="nav-drawer-toggle js-nav-drawerToggle" id="toggleMenu">Menu</a>
+            <a class="nav-logo" href="#home"><img src="img/logo-papp-blk.svg" alt="papplication logo"></a> <a class="nav-drawer-toggle js-nav-drawerToggle" id="toggleMenu">Menu</a>
             <div class="nav-menu">
                 <a class="nav-menu-link js-nav-menuLink" href="#about">About</a> <a class="nav-menu-link js-nav-menuLink" href="#products">Products</a> <a class="nav-menu-link js-nav-menuLink" href="#news">News</a> <a class="nav-menu-link js-nav-menuLink" href="contact">Support</a>
             </div>
@@ -316,7 +316,7 @@
             </div>
         </div>
         <div class="social-media">
-            <a class="social-media-icon" href="https://twitter.com/P_application" target="_blank"><img src="img/icon-twitter.png"></a> <a class="social-media-icon" href="https://www.instagram.com/papplicationstudio/" target="_blank"><img src="img/icon-instagram.png" alt="instagram icon"></a> <a class="social-media-icon" href="https://www.facebook.com/papplication/" target="_blank"><img src="img/icon-facebook.png" alt="facebook icon"></a> <a class="social-media-icon" href="https://www.linkedin.com/company/papplicationstudio/" target="_blank"><img src="img/icon-linked.png" alt="linkedin icon"></a> <a class="social-media-icon" href="https://www.youtube.com/channel/UCZ8TIQhI3LiNEq5TcFYt1TQ" target="_blank"><img src="img/icon-youtube.png" alt="youtube icon"></a>
+            <a class="social-media-icon" href="https://twitter.com/P_application" target="_blank"><img src="img/icon-twitter.png" alt="twitter icon"></a> <a class="social-media-icon" href="https://www.instagram.com/papplicationstudio/" target="_blank"><img src="img/icon-instagram.png" alt="instagram icon"></a> <a class="social-media-icon" href="https://www.facebook.com/papplication/" target="_blank"><img src="img/icon-facebook.png" alt="facebook icon"></a> <a class="social-media-icon" href="https://www.linkedin.com/company/papplicationstudio/" target="_blank"><img src="img/icon-linked.png" alt="linkedin icon"></a> <a class="social-media-icon" href="https://www.youtube.com/channel/UCZ8TIQhI3LiNEq5TcFYt1TQ" target="_blank"><img src="img/icon-youtube.png" alt="youtube icon"></a>
         </div>
         <ul>
             <li>Copyright &copy; 2021 P'application Studio</li>
