--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <article class="p-terms">
                 <div class="p-terms-content">
                     <h2 class="title">Hello there.<br> How can we help?</h2>
-                    <p>We are here to help in any way we can, Please send you question or anything you might need to know at this email.</p>
+                    <p>We are here to help in any way we can.</p>
                     <p>We really appreciate your feedback which will help us to continue improving our products for you.</p>
                     <h4 class="subtitle subtitle-strong">Contacts</h4>
                     <p>General press inquiries: <a href="mailto:papplicationstudio@gmail.com"><b>papplicationstudio@gmail.com</b></a></p>
