--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>P'application Studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
     <meta content="initial-scale=1.0, minimum-scale=1.0, width=device-width" name="viewport">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content="no" name="apple-mobile-web-app-capable">
