--- a/blixi.html
+++ b/blixi.html
@@ -46,9 +46,11 @@
         <div class="p-container">
             <article class="p-terms">
                 <header class="p-header">
-                    <div class="p-terms-title">
-                        <h1>Blixi</h1>
-                        <p><strong>Refreshing new colorful puzzle</strong></p>
+                    <div class="main-title u-is-invisible js-revealHero">
+                        <div class="p-container">
+                            <h1 class="headline">Blixi</h1>
+                            <p><strong>Refreshing new colorful puzzle</strong></p>
+                        </div>
                     </div>
                 </header>
                 <div class="p-terms-content">
