--- a/blixi.html
+++ b/blixi.html
@@ -28,7 +28,7 @@
     <link href="img/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="img/icons/favicon.ico" rel="shortcut icon">
     <link href="css/main.css" rel="stylesheet">
-    <link href="https://papplication.github.io/site/index" rel="canonical">
+    <link href="https://papplication.github.io/site/blixi" rel="canonical">
 </head>
 <body id="home">
     <nav class="nav js-nav">
