--- a/blixi.html
+++ b/blixi.html
@@ -6,20 +6,20 @@
     <meta content="initial-scale=1.0, minimum-scale=1.0, width=device-width" name="viewport">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content="no" name="apple-mobile-web-app-capable">
-    <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." name="description">
+    <meta content="Blixi is a relaxing puzzle game with beautiful neumorphic design and innovative fresh gameplay. Compete for the top ranks with players from around the world on the constantly updated leaderboards. Blixi is an ideal casual game, you can interrupt and continue your progress at any time." name="description">
     <meta content="game maker to ios, ios game downloads, ios games, mobile game, mobile game downloads, badlands arcade game, rubic cube, rubic cube pattern, rubic cube solution, arcade game, free download arcade game, abantus,saga,papplicationstudio,ios,swift,indiedev,game,indiegame,cube,rectangle,jewel,bejewel,tetrix,pacman,cube crash,space arcade,candycrush,in space,cube,arcade,sun,space,bloks,rectangle,square,jewel,crash,puzzle,candy,crush,miner,hero,similar,block,circle,ball,orb,best,merge,number,2048,block,solitaire,2021,color,match,glow,cube,fall,dice,1,slider" name="keywords" />
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@P_application" name="twitter:site">
-    <meta content="P'application Studio | Innovation Studio" name="twitter:title">
-    <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." name="twitter:description">
-    <meta content="https://papplication.github.io/site/img/icons/1200x1200.jpg" name="twitter:image">
-    <meta content="https://papplication.github.io/site/" name="twitter:url">
+    <meta content="P'application Studio | Blixi" name="twitter:title">
+    <meta content="Blixi is a relaxing puzzle game with beautiful neumorphic design and innovative fresh gameplay. Compete for the top ranks with players from around the world on the constantly updated leaderboards. Blixi is an ideal casual game, you can interrupt and continue your progress at any time." name="twitter:description">
+    <meta content="https://papplication.github.io/site/img/home-product8.png" name="twitter:image">
+    <meta content="https://papplication.github.io/site/blixi" name="twitter:url">
     <meta content="website" property="og:type">
-    <meta content="P'application Studio" property="og:site_name">
-    <meta content="P'application Studio" property="og:title">
-    <meta content="P'application Studio is an innovation studio was created in 2013 and our mission is to create products we’re truly proud of." property="og:description">
-    <meta content="https://papplication.github.io/site/img/icons/1200x1200.jpg" property="og:image">
-    <meta content="https://papplication.github.io/site/" property="og:url">
+    <meta content="P'application Studio | Blixi" property="og:site_name">
+    <meta content="P'application Studio | Blixi" property="og:title">
+    <meta content="Blixi is a relaxing puzzle game with beautiful neumorphic design and innovative fresh gameplay. Compete for the top ranks with players from around the world on the constantly updated leaderboards. Blixi is an ideal casual game, you can interrupt and continue your progress at any time." property="og:description">
+    <meta content="https://papplication.github.io/site/img/home-product8.png" property="og:image">
+    <meta content="https://papplication.github.io/site/blixi" property="og:url">
     <link href="img/icons/icon-iphone.png" rel="apple-touch-icon-precomposed" sizes="57x57">
     <link href="img/icons/icon-iphone-@2x.png" rel="apple-touch-icon-precomposed" sizes="114x114">
     <link href="img/icons/icon-ipad.png" rel="apple-touch-icon-precomposed" sizes="72x72">
@@ -76,6 +76,9 @@
                     </a>
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/UobdHjpawxI" frameborder="0"></iframe>
+                    </div>
+                    <div class="facebook-container">
+                        <div class="fb-like" data-href="https://papplication.github.io/site/blixi" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
                     </div>
                 </div>
             </article>
@@ -145,5 +148,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-121401102-1');
     </script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0&appId=1422344567799488&autoLogAppEvents=1" nonce="DpLcY50Q"></script>
 </body>
 </html>
