--- a/blixi.html
+++ b/blixi.html
@@ -53,6 +53,15 @@
                         </div>
                     </div>
                 </header>
+                <div class="main-view-list-wrapper">
+                    <p class="article-header">by 
+                    <a href="https://apps.apple.com/us/developer/oliver-papp/id896476189" target="_blank" title="Read more">
+                        <span>
+                            <strong>Olivér Papp</strong>
+                        </span>
+                    </a>
+                    on 27/03/2021
+                </div>
                 <div class="p-terms-content">
                     <p>Blixi is a relaxing puzzle game with beautiful neumorphic design and innovative fresh gameplay. Compete for the top ranks with players from around the world on the constantly updated leaderboards. Blixi is an ideal casual game, you can interrupt and continue your progress at any time.</p>
                     <p>Missing the days when games weren’t all about advertising and spending money? Blixi is your game then.</p>
