--- a/blixi.html
+++ b/blixi.html
@@ -57,7 +57,7 @@
                     <p class="article-header">by 
                     <a href="https://apps.apple.com/us/developer/oliver-papp/id896476189" target="_blank" title="Read more">
                         <span>
-                            <strong>Olivér Papp</strong>
+                            <strong>Oliver Papp</strong>
                         </span>
                     </a>
                     on 27/03/2021
