--- a/blixi.html
+++ b/blixi.html
@@ -66,6 +66,13 @@
                     <p>Blixi is a relaxing puzzle game with beautiful neumorphic design and innovative fresh gameplay. Compete for the top ranks with players from around the world on the constantly updated leaderboards. Blixi is an ideal casual game, you can interrupt and continue your progress at any time.</p>
                     <p>Missing the days when games weren’t all about advertising and spending money? Blixi is your game then.</p>
                     <div class="articles-snippet-frame" style="background-image: url(img/home-product8.png)"></div>
+                    <div class="main-view">
+                        <div class="main-view-list-wrapper">
+                            <div class="main-view-list">
+                                <p class="u-font-size-lg"><i>"One of the cutest and most aesthetically pleasing games that I have come across, Blixi is a puzzle game that you are going to love."</i><br><strong>- kubadownload.com -</strong></p>
+                            </div>
+                        </div>
+                    </div>
                     <p class="subtitle subtitle-strong"><br>How to play</p>
                     <p>Swipe (Use arrow keys - macOS) & merge circles</p>
                     <p class="subtitle subtitle-strong">Features</p>
