--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <section class="p-section">
                 <section class="p-section articles-snippet">
                     <div class="articles-snippet-col">
-                        <a class="articles-snippet-frame-wrapper" href="blixi" target="_blank">
+                        <a class="articles-snippet-frame-wrapper" href="blixi">
                         <div class="articles-snippet-frame" style="background-image: url(img/article-blixi.jpg)"></div></a>
                     </div>
                     <div class="articles-snippet-col">
@@ -134,7 +134,7 @@
                             <h2 class="title title-smaller u-weight-400"><a>Blixi</a></h2>
                             <p></p>
                             <div class="articles-snippet-link">
-                                <a class="button" href="blixi" target="_blank" title="Read more"><span>Read Article</span>
+                                <a class="button" href="blixi" title="Read more"><span>Read Article</span>
                                 <div class="button-arrow-right"></div></a>
                             </div>
                         </div>
